[package]
name = "spnhub"
version = "0.93.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47", features = ["full"] }
rustls = { version = "0.23", features = ["ring"] }
quinn = "0.11"
x509-parser = "0.17"
clap = { version = "4.5", features = ["derive", "env"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono = "0.4"
