[package]
name = "spnhub"
version = "0.96.0"
edition = "2024"

[dependencies]
arc-swap = "1.7"
bollard = "0.20"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "env"] }
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
x509-parser = "0.17"
